web: add user profiles
